--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "requirejs": "*",
+    "jquery": "*",
     "should": "*",
     "react": "0.11.0",
     "jsdom": "0.10.5"
